--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.github.sharelison</groupId>
     <artifactId>jsontojava</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -39,7 +37,8 @@
         <url>https://github.com/Sharelison/JsonToJava</url>
         <connection>scm:git:git@github.com:sharelison/JsonToJava.git</connection>
         <developerConnection>scm:git:git@github.com:sharelison/JsonToJava.git</developerConnection>
-    </scm>
+      <tag>jsontojava-1.0.0</tag>
+  </scm>
 
     <developers>
         <developer>
