--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.github.sharelison</groupId>
     <artifactId>jsontojava</artifactId>
-    <version>1.0.0</version>
+    <version>1.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -20,6 +22,7 @@
         <maven-gpg-plugin.version>1.5</maven-gpg-plugin.version>
         <nexus-staging-maven-plugin.version>1.6.7</nexus-staging-maven-plugin.version>
         <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
+        <project.scm.id>github</project.scm.id>
     </properties>
 
     <name>jsontojava</name>
@@ -37,8 +40,7 @@
         <url>https://github.com/Sharelison/JsonToJava</url>
         <connection>scm:git:git@github.com:sharelison/JsonToJava.git</connection>
         <developerConnection>scm:git:git@github.com:sharelison/JsonToJava.git</developerConnection>
-      <tag>jsontojava-1.0.0</tag>
-  </scm>
+    </scm>
 
     <developers>
         <developer>
