--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,8 @@
 
     <scm>
         <url>https://github.com/Sharelison/JsonToJava</url>
-        <connection>scm:git:git@github.com:sharelison/JsonToJava.git</connection>
-        <developerConnection>https://github.com/Sharelison/JsonToJava.git</developerConnection>
+        <connection>scm:git:https://github.com/sharelison/JsonToJava.git</connection>
+        <developerConnection>scm:git:https://github.com/sharelison/JsonToJava.git</developerConnection>
     </scm>
 
     <developers>
